--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Taiki Ono <taiks.4559@gmail.com>"]
 
 [dependencies]
+
+[dependencies.nom]
+version = "^2.0"
+features = ["verbose-errors"]
